# cipmaster

./: README.md  pyproject.toml
phase3/: README.txt  Requirements.txt  main.py
phase3/cip/: __init__.py  config.py  fields.py  network.py  session.py  ui.py
phase3/conf/: cip_ICD_F3_20231201.xml
src/cip/: __init__.py
src/cipmaster/: __init__.py
src/cipmaster/cip/: config.py
src/cipmaster/cli/: __init__.py  app.py  ui_helpers.py
src/cipmaster/conf/: __init__.py
src/cipmaster/services/: __init__.py  config_loader.py  networking.py  sessions.py
tests/: test_cip_session.py  test_cip_status_utils.py  test_cli_cip_config.py  test_config_resources.py  test_network_multicast.py  test_packet_defaults.py  test_tgv2020_udp.py
tests/cli/: test_ui_helpers.py
tests/services/: test_config_loader_service.py  test_networking_service.py  test_session_service.py
