[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cipmaster"
version = "3.0.0"
description = "Command line tooling for interacting with CIP-enabled control units"
readme = "README.md"
authors = [{name = "Alok T J"}]
license = {text = "Proprietary"}
requires-python = ">=3.10"
dependencies = [
    "pyinstaller>=6.0",
    "click==8.1.7",
    "ping3==4.0.5",
    "pyfiglet==1.0.2",
    "scapy>=2.6.0",
    "tabulate==0.9.0",
    "termcolor==2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.3",
]

[project.scripts]
cipmaster = "cipmaster.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"cipmaster.conf" = ["*.xml"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]
